# pydedisp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  setup.cfg  setup.py
.github/workflows/: build.yml
docs/: CMakeLists.txt  conf.py  index.rst
example/: CMakeLists.txt  testdedisp.c  testdedisp.cpp
include/dedisp/: DedispPlan.hpp  dedisp.hpp  dm_equations.hpp
pydedisp/: __init__.py  bindings.cpp  dedisperser.py
src/: CMakeLists.txt  dedisp.cu  gpu_memory.hpp  kernels.cuh  transpose.hpp  utils.hpp
tests/: __init__.py  conftest.py  test_dedisp.py
