add_library(${PROJECT_NAME} SHARED dedisp.cu)
set_target_properties(${PROJECT_NAME} PROPERTIES
					  	VERSION ${PROJECT_VERSION}
    				  	SOVERSION ${PROJECT_VERSION_MAJOR}
    				  	PUBLIC_HEADER ${PROJECT_SOURCE_DIR}/src/dedisp.h)

target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src)

install(TARGETS ${PROJECT_NAME}
		LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
        PUBLIC_HEADER DESTINATION ${PROJECT_SOURCE_DIR}/include)
